# CEOAgent

./: .cursorrules  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_ENHANCED.md  BACKEND_DEV_GUIDE.md  CHANGELOG.md  CI_CD_TROUBLESHOOTING.md  CLAUDE.md  DECISIONS.md  DESIGN_AND_VALIDATION_README.md  Dockerfile  EXECUTION_PLAN.md  GCP_USER_INFO.md  GITHUB_SECRETS_QUICK.md  GITHUB_SECRETS_SETUP.md  ISSUES.md  MASTER_PLAN.md  OPERATIONS.md  QUESTIONS.md  README.md  REQUIREMENTS.md  REVIEWS.md  SERVER_DEPLOYMENT.md  SSH_KEY_INFO.md  START_HERE.md  TASKS.md  UI_DESIGN_GUIDE.md  WEEKLY_CHECKLIST.md  docker-compose.prod.yml  docker-compose.yml  env.server.example  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: CEO_DASHBOARD.md  MULTI_AGENT_GUIDE.md  TEAM_STRUCTURE.md
.claude/agents/: tech-lead.md
.claude/roles/: architect.md  backend_dev.md  dev_manager.md  developer.md  devops.md  frontend_dev.md  qa.md  (+2 more)
.github/: CICD_COMPLETION_REPORT.md  CICD_QUICK_TEST.md  CICD_STATUS.txt  CI_CD_SETUP_CHECKLIST.md  FINAL_CHECKLIST.md  dependabot.yml
ADR/: ADR-001-skill-based-architecture.md  ADR-002-vector-database-selection.md  ADR-003-backend-framework-selection.md  ADR-004-react-vs-plan-and-execute.md  ADR-005-memory-system-architecture.md  README.md
docs/: README.md  VALIDATION_LOGIC.md
monitoring/: prometheus.yml
scenarios/: 01_investment_decision.md  02_risk_assessment.md  03_strategy_planning.md  SCENARIO_TEMPLATE.md
scripts/: README.md  add-ssh-key-gcp.sh  add-ssh-key-to-server.sh  add-ssh-key-via-browser.sh  backup.sh  deploy-server.sh  deploy.sh  install-auto-push.sh  install-server-dependencies.sh  setup-ssh-for-github.sh  setup_github.sh  setup_ssh_key.sh  test-server-connection.sh  test-workflow-syntax.sh  uninstall-auto-push.sh  validate-cicd-config.sh
tests/: README.md  conftest.py  test_basic.py
(+58 files in other folders)
